Animation class ready, paths need to be correctd, and debugging done